--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,7 @@ body {
   overflow-x: hidden;
   color: var(--main-text-color);
   font-family: var(--base-font);
+  overflow-x: hidden;
 }
 .container {
   width: 100%;
@@ -80,7 +81,8 @@ body {
   }
 }
 .hero {
-  height: calc(100vh - 48px);
+  max-height: calc(100vh - 48px);
+  object-position: center;
   overflow: hidden;
   width: 100%;
   img {
@@ -95,8 +97,7 @@ body {
 /*################## #### ##################*/
 main section {
   display: flow-root;
-  margin: 100px 0;
-  padding: 0 16px;
+  padding: 50px 16px;
 }
 main section h2 {
   font-family: var(--header-font);
@@ -114,12 +115,12 @@ main section p {
 }
 main section.project-description {
   text-align: center;
-  padding: 100px 16px;
+  margin: 100px 16px 50px;
 }
 
 main section:not(.project-description) {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   grid-template-rows: auto 1fr;
   align-items: start;
   column-gap: 20px;
@@ -128,7 +129,9 @@ main section:not(.project-description) {
     grid-row: 1/3;
     width: 100%;
     img {
+      aspect-ratio: 595/841;
       width: 100%;
+      object-fit: cover;
     }
   }
   h2 {
@@ -143,24 +146,7 @@ main section:not(.project-description) {
     margin: 10px 0;
   }
 }
-@media screen and (max-width: 600px) {
-  main section:not(.project-description) {
-    column-gap: 20px;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr 1fr;
-    h2 {
-      grid-column: 1 !important;
-    }
-    .image-container {
-      grid-column: 1 !important;
-      grid-row: 2 !important;
-    }
-    p {
-      grid-column: 1 !important;
-      grid-row: 3 !important;
-    }
-  }
-}
+
 /*################## ############ ##################*/
 /*################## team members ##################*/
 /*################## ############# ##################*/
@@ -169,15 +155,23 @@ section.team-members {
   padding: 50px 0;
   padding: 0 16px;
   h2 {
+    font-family: var(--header-font);
+    font-size: 2.5rem;
+    letter-spacing: 1px;
+    font-weight: 500;
+    margin-bottom: 20px;
   }
   .team-members-container {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, 200px);
-    grid-template-rows: repeat(auto-fill, 300px);
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 20px;
     height: auto;
+    padding-bottom: 20px;
+    .member-container {
+      height: 270px;
+    }
     .member {
       height: 100%;
       margin-top: 20px;
@@ -246,23 +240,38 @@ div.member:hover {
 .links a svg {
   transition: all 0.3s ease-in-out;
 }
-/* 
-main section.image-text-wrapper {
-  min-height: 200px;
-  .data-wrapper {
-    .image-container {
-      display: inline;
-      height: 200px;
-      margin: 5px 10px 0;
-      float: right;
-      img {
-        height: 100%;
-      }
+
+@media screen and (max-width: 600px) {
+  nav {
+    padding: 0 !important;
+
+    .logo {
+      margin: auto;
     }
-    p {
-      text-align: justify;
-      word-break: normal;
-      overflow-wrap: break-word;
+    ul {
+      display: none !important;
     }
   }
-} */
+  h2 {
+    font-size: 1.5rem !important;
+  }
+  main section {
+    /* margin: 50px 0; */
+  }
+  main section:not(.project-description) {
+    column-gap: 20px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+    h2 {
+      grid-column: 1 !important;
+    }
+    .image-container {
+      grid-column: 1 !important;
+      grid-row: 2 !important;
+    }
+    p {
+      grid-column: 1 !important;
+      grid-row: 3 !important;
+    }
+  }
+}
