--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,10 +47,12 @@ body {
 /*################## landing ##################*/
 /*################## ####### ##################*/
 .nav-container {
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.9);
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
   nav {
@@ -82,13 +84,16 @@ body {
 }
 .hero {
   max-height: calc(100vh - 48px);
+  -o-object-position: center;
   object-position: center;
   overflow: hidden;
   width: 100%;
   img {
     width: 100%;
     height: 100%;
+    -o-object-fit: cover;
     object-fit: cover;
+    -o-object-position: center;
     object-position: center;
   }
 }
@@ -109,6 +114,8 @@ main section h2 {
 main section p {
   font-size: 0.9rem;
   color: var(--secondary-text-color);
+  -webkit-hyphens: manual;
+  -ms-hyphens: manual;
   hyphens: manual;
   margin: 20px 0;
   word-break: break-word;
@@ -123,6 +130,7 @@ main section:not(.project-description) {
   grid-template-columns: 1fr 2fr;
   grid-template-rows: auto 1fr;
   align-items: start;
+  -moz-column-gap: 20px;
   column-gap: 20px;
   .image-container {
     grid-column: 1;
@@ -131,6 +139,7 @@ main section:not(.project-description) {
     img {
       aspect-ratio: 595/841;
       width: 100%;
+      -o-object-fit: cover;
       object-fit: cover;
     }
   }
@@ -175,6 +184,8 @@ section.team-members {
     .member {
       height: 100%;
       margin-top: 20px;
+      height: -webkit-fit-content;
+      height: -moz-fit-content;
       height: fit-content;
       cursor: pointer;
       box-sizing: border-box;
@@ -189,6 +200,7 @@ section.team-members {
       img {
         aspect-ratio: 1;
         height: 100px;
+        -o-object-fit: cover;
         object-fit: cover;
         border-radius: 10px;
         margin: -20px 0 0;
@@ -259,6 +271,7 @@ div.member:hover {
     /* margin: 50px 0; */
   }
   main section:not(.project-description) {
+    -moz-column-gap: 20px;
     column-gap: 20px;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr auto;
