--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,7 +88,11 @@ nav li:last-of-type {
   overflow: hidden;
   width: 100%;
 }
-.hero img
+.hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 /*################## #### ##################*/
 /*################## main ##################*/
 /*################## #### ##################*/
@@ -159,7 +163,7 @@ section.team-members {
     font-size: 2.5rem;
     letter-spacing: 1px;
     font-weight: 500;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   .team-members-container {
     width: 100%;
@@ -259,10 +263,9 @@ div.member:hover {
     font-size: 1.5rem !important;
   }
   main section {
-    /* margin: 50px 0; */
+    padding: 25px 16px !important;
   }
   main section:not(.project-description) {
-    -moz-column-gap: 20px;
     column-gap: 20px;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr auto;
@@ -277,5 +280,8 @@ div.member:hover {
       grid-column: 1 !important;
       grid-row: 3 !important;
     }
+  }
+  section.team-members h2 {
+    padding-left: 10px;
   }
 }
