--- a/assets/css/imageGallery.css
+++ b/assets/css/imageGallery.css
@@ -1,54 +1,56 @@
 .image-gallery {
   max-width: 500px;
   margin-bottom: 20px;
+}
 
-  button.nextBtn,
-  button.prevBtn {
-    all: unset;
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.8);
-    border-radius: 50%;
-    padding: 5px;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-items: center;
-  }
-  .image-container {
-    aspect-ratio: 595/841;
-  }
-  .large-image {
-    -o-object-fit: cover;
-    object-fit: cover;
-  }
+.image-gallery button.nextBtn,
+.image-gallery button.prevBtn {
+  all: unset;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 50%;
+  padding: 5px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
 
-  .thumbnail-gallery {
-    display: flex;
-    align-items: center;
-  }
+.image-gallery .image-container {
+  aspect-ratio: 595/841;
+}
 
-  .thumbnail-gallery button {
-    margin: 0 10px;
-  }
+.image-gallery .large-image {
+  -o-object-fit: cover;
+  object-fit: cover;
+}
 
-  .thumbnails {
-    display: flex;
-    overflow-x: auto;
-    scroll-behavior: smooth;
-    padding: 10px 0;
-    height: 100px;
-  }
+.image-gallery .thumbnail-gallery {
+  display: flex;
+  align-items: center;
+}
 
-  .thumbnail {
-    width: 100px;
-    height: auto;
-    margin: 0 5px;
-    cursor: pointer;
-    border: 2px solid transparent;
-    transition: border 0.3s;
-  }
+.image-gallery .thumbnail-gallery button {
+  margin: 0 10px;
+}
 
-  .thumbnail.active {
-    border: 2px solid rgba(210, 61, 61, 0.501);
-  }
+.image-gallery .thumbnails {
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  padding: 10px 0;
+  height: 100px;
+}
+
+.image-gallery .thumbnail {
+  width: 100px;
+  height: auto;
+  margin: 0 5px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  transition: border 0.3s;
+}
+
+.image-gallery .thumbnail.active {
+  border: 2px solid rgba(210, 61, 61, 0.501);
 }
