--- a/assets/css/imageViewer.css
+++ b/assets/css/imageViewer.css
@@ -1,6 +1,7 @@
 img.view {
   cursor: pointer;
 }
+
 .image-viewer {
   box-sizing: border-box;
   position: fixed;
@@ -13,42 +14,43 @@ img.view {
   background-color: rgba(0, 0, 0, 0.9);
   backdrop-filter: blur(2px);
   padding: 10px;
+}
 
-  .icons {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 10;
+.image-viewer .icons {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 10;
+}
 
-    span {
-      margin: 0 5px;
-      display: inline-block;
-      height: 25px;
-      aspect-ratio: 1;
-      cursor: pointer;
-      background-color: rgba(0, 0, 0, 0.5);
-      border-radius: 50%;
-      padding: 10px;
+.image-viewer .icons span {
+  margin: 0 5px;
+  display: inline-block;
+  height: 25px;
+  aspect-ratio: 1;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  padding: 10px;
+}
 
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-      }
-    }
-  }
-  .image-wrapper {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    position: relative;
+.image-viewer .icons span img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      position: absolute;
-    }
-  }
+.image-viewer .image-wrapper {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  position: relative;
+}
+
+.image-viewer .image-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  position: absolute;
 }
